tests/snapshots/cases@16_nested_tensor.qtt.snap
---
source: tests/snapshots.rs
expression: out
input_file: tests/cases/16_nested_tensor.qtt
---
def rot
  : (0 A : Type) -> (0 B : Type) -> (0 C : Type) -> (1 p : A * B * C) -> (A * B) * C
  := \A => \B => \C => \p => let (a, q) = p in let (b, c) = q in ((a, b), c)
eval
  = ((true, false), true)
  : (Bool * Bool) * Bool
