tests/snapshots/cases@24_err_with_mismatch.qtt.snap
---
source: tests/snapshots.rs
expression: out
input_file: tests/cases/24_err_with_mismatch.qtt
---
ERROR: with-pair components consume different resources (at depth 1)
